--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <h2>Festas do Campo</h2>
                 <ul>
                     <li>Festa do Peão de Boiadeiro (rodeios e música sertaneja)</li>
-                    <p>A festa do </p>
+                    <p class="paragrafo">A festa do </p>
                     <li>Festa da Colheita (celebrando a safra agrícola)</li>
                     <li>Festa do Milho (comidas típicas e quadrilhas)</li>
                     <li>Romarias e Cavalgadas (tradições religiosas e comunitárias)</li>
