--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                     <li>Festa do Peão de Boiadeiro (rodeios e música sertaneja)</li>
                     <p class="paragrafo">A festa do Peão de Boiadeiro é uma festa popular brasileira,com destaque para Festa do Peão de Barretos, que é o maior festival de rodeio da America Latina  </p>
                     <li>Festa da Colheita (celebrando a safra agrícola)</li>
+                    <p class="paragrafo">A festa da Colheita é uma celebração comemorativa que se realiza após a colheita dos produtos agrícolas, geralmente com foco em agradecer pela abundância e em celebrar a cultura rural</p>        
                     <li>Festa do Milho (comidas típicas e quadrilhas)</li>
                     <li>Romarias e Cavalgadas (tradições religiosas e comunitárias)</li>
                 </ul>
