--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                     <li>Festa da Colheita (celebrando a safra agrícola)</li>
                     <p class="paragrafo">A festa da Colheita é uma celebração comemorativa que se realiza após a colheita dos produtos agrícolas, geralmente com foco em agradecer pela abundância e em celebrar a cultura rural</p>        
                     <li>Festa do Milho (comidas típicas e quadrilhas)</li>
+                    <p class="paragrafo">A Festa do Milho  </p>                   
                     <li>Romarias e Cavalgadas (tradições religiosas e comunitárias)</li>
                 </ul>
             </div>
