--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
                 <h2>Festas do Campo</h2>
                 <ul>
                     <li>Festa do Peão de Boiadeiro (rodeios e música sertaneja)</li>
-                    <p class="paragrafo">A festa do Peão de Boiadeiro é uma festa popular brasileira,com destaque para Festa do Peão de Barretos, que é o maior festival de rodeio da America Latina  </p>
+                    <p class="paragrafo">A festa do Peão de Boiadeiro é uma festa popular brasileira,com destaque para Festa do Peão de Barretos, que é o maior festival de rodeio da America Latina</p>
                     <li>Festa da Colheita (celebrando a safra agrícola)</li>
                     <p class="paragrafo">A festa da Colheita é uma celebração comemorativa que se realiza após a colheita dos produtos agrícolas, geralmente com foco em agradecer pela abundância e em celebrar a cultura rural</p>        
                     <li>Festa do Milho (comidas típicas e quadrilhas)</li>
-                    <p class="paragrafo">A Festa do Milho  </p>                   
+                    <p class="paragrafo">A Festa do Milho é uma celebração cultural e gastronômica que destaca a importância do milho em diversas comunidade</p>                   
                     <li>Romarias e Cavalgadas (tradições religiosas e comunitárias)</li>
+                    <p class="paragrafo">As Romarias e Cvalgadas sãoeventos tradicionais, muitas vezes religiosos, que envolvem cavaleiros e seus cavalos</p>  
                 </ul>
             </div>
 
