--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agrinho 2025 - Conexão Campo-Cidade</title>
+    <title>Projeto Agrinho 2025 - Conexão Campo-Cidade</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <div class="quote-box">
-            <h1>Agrinho 2025</h1>
+            <h1>Projeto Agrinho 2025</h1>
             <p class="quote">
                 "Festejando a conexão campo-cidade, celebramos a união que alimenta, inspira e fortalece. 
                 Do campo vem o sustento, da cidade a inovação; juntos, construímos um futuro sustentável e próspero para todos!"
             </p>
-            <p class="author">#Agrinho2025</p>
+            <p class="author">#ProjetoAgrinho2025</p>
         </div>
 
         <div class="festivities">
@@ -36,6 +36,7 @@
                 <h2>Festas da Cidade</h2>
                 <ul>
                     <li>Carnaval (blocos de rua e desfiles)</li>
+                    <p class="paragrafo">O Carnaval é uma festa popular, celebrada no Brasil, que antecede a Quaresma, período de 40 dias antes da Páscoa, com muita dança e alegria</p> 
                     <li>Festivais de Inverno (música, teatro e gastronomia)</li>
                     <li>Festa Junina Urbana (adaptação das tradições rurais)</li>
                     <li>Paradas Culturais (celebração da diversidade)</li>
