--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <li>Festa do Milho (comidas típicas e quadrilhas)</li>
                     <p class="paragrafo">A Festa do Milho é uma celebração cultural e gastronômica que destaca a importância do milho em diversas comunidade</p>                   
                     <li>Romarias e Cavalgadas (tradições religiosas e comunitárias)</li>
-                    <p class="paragrafo">As Romarias e Cvalgadas sãoeventos tradicionais, muitas vezes religiosos, que envolvem cavaleiros e seus cavalos</p>  
+                    <p class="paragrafo">As Romarias e Cvalgadas são eventos tradicionais, muitas vezes religiosos, que envolvem cavaleiros e seus cavalos</p>  
                 </ul>
             </div>
 
@@ -38,6 +38,7 @@
                     <li>Carnaval (blocos de rua e desfiles)</li>
                     <p class="paragrafo">O Carnaval é uma festa popular, celebrada no Brasil, que antecede a Quaresma, período de 40 dias antes da Páscoa, com muita dança e alegria</p> 
                     <li>Festivais de Inverno (música, teatro e gastronomia)</li>
+                    <p class="paragrafo">Os Festivais de Inverno são eventos culturais realizados durante a estação mais fria do ano, que oferecem shows, dança, gastronomia e muito mais </p> 
                     <li>Festa Junina Urbana (adaptação das tradições rurais)</li>
                     <li>Paradas Culturais (celebração da diversidade)</li>
                 </ul>
