--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                     <li>Festivais de Inverno (música, teatro e gastronomia)</li>
                     <p class="paragrafo">Os Festivais de Inverno são eventos culturais realizados durante a estação mais fria do ano, que oferecem shows, dança, gastronomia e muito mais </p> 
                     <li>Festa Junina Urbana (adaptação das tradições rurais)</li>
+                    <p class="paragrafo">As Festas Juninas Urbanas apresentam adaptações e influências da vida moderna e da diversidade cultural das cidades </p> 
                     <li>Paradas Culturais (celebração da diversidade)</li>
                 </ul>
             </div>
