--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
                     <li>Festivais de Inverno (música, teatro e gastronomia)</li>
                     <p class="paragrafo">Os Festivais de Inverno são eventos culturais realizados durante a estação mais fria do ano, que oferecem shows, dança, gastronomia e muito mais </p> 
                     <li>Festa Junina Urbana (adaptação das tradições rurais)</li>
-                    <p class="paragrafo">As Festas Juninas Urbanas apresentam adaptações e influências da vida moderna e da diversidade cultural das cidades </p> 
+                    <p class="paragrafo">As Festas Juninas Urbanas apresentam adaptações e influências da vida moderna e da diversidade cultural das cidades</p> 
                     <li>Paradas Culturais (celebração da diversidade)</li>
+                    <p class="paragrafo">As Paradas Culturais são eventos ou ações que celebram a cultura de uma comunidade, região ou grupo</p> 
                 </ul>
             </div>
         </div>
